Working towards mouseover jumping

--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body, html{
 }
 body{
   margin: 0px;
-  background-color:#444;
+  background-image:url("http://1.bp.blogspot.com/-YzKDuNlnXdQ/UMdiZLTKRAI/AAAAAAAAAL0/8bD1XiZRclA/s1600/4-seasons-nclub.jpg");
   font-size: 18px;
 }
 body, a:link, a:visited, a:active{
